Specify main version for now

--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Run Golint
         id: golintr
-        uses: norwd/golintr@v2
+        uses: norwd/golintr@main
         with:
           path: ./src/...
 
