--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,10 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: "Install `golint`"
+      shell: bash
+      run: go install golang.org/x/lint/golint@latest
+
     - name: "Run `golint`"
       id: golint
       env:
