--- a/action.yml
+++ b/action.yml
@@ -21,16 +21,20 @@ runs:
   using: composite
   steps:
     - name: "Install `golint`"
+      id: install
       shell: bash
-      run: go install golang.org/x/lint/golint@latest
+      run: |
+        go install golang.org/x/lint/golint@latest
+        echo "location=$(go list -f {{.Target}} golang.org/x/lint/golint)" >> "${GITHUB_OUTPUT}"
 
     - name: "Run `golint`"
       id: golint
       env:
+        GOLINT_LOCATION: ${{ steps.install.outputs.location }}
         GOLINT_PATH: ${{ inputs.path }}
       shell: bash
       run: |
-        if ! GOLINT_OUTPUT="$(golint -set_exit_status "${GOLINT_PATH}")"
+        if ! GOLINT_OUTPUT="$("${GOLINT_LOCATION}" -set_exit_status "${GOLINT_PATH}")"
         then
           echo "::error::${GITHUB_OUTPUT}"
 
