Separate golint and error checking steps

--- a/action.yml
+++ b/action.yml
@@ -31,17 +31,13 @@ runs:
         GOLINT_PATH: ${{ inputs.path }}
       shell: bash
       run: |
-        # Run `golint`
-        GOLINT_OUTPUT="$("$(go env GOPATH)/bin/golint" -set_exit_status "${GOLINT_PATH}" || true)"
+        echo "errors=$("$(go env GOPATH || echo "~/go")/bin/golint" -set_exit_status "${GOLINT_PATH}" || true)" >> "${GITHUB_OUTPUT}"
 
-        # Set Step Output
-        if [ -z "${GITHUB_OUTPUT}" ]
-        then
-          echo "::set-output name=errors::${GOLINT_OUTPUT}"
-        else
-          echo "errors=${GOLINT_OUTPUT}" >> "${GITHUB_OUTPUT}"
-        fi
-
+    - name: "Report Errors (if any)"
+      env:
+        GOLINT_OUTPUT: ${{ steps.golint.outputs.errors }}
+      shell: bash
+      run: |
         # Signal Error and Fail
         if [ "${GOLINT_OUTPUT}" ]
         then
