Allow multiline outputs from golint

--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,9 @@ runs:
         GOLINT_PATH: ${{ inputs.path }}
       shell: bash
       run: |
-        echo "errors=\"$(~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true)\"" >> "${GITHUB_OUTPUT}"
+        echo "errors<<EOF" >> "${GITHUB_OUTPUT}"
+        ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true
+        echo "EOF" >> "${GITHUB_OUTPUT}"
 
     - name: "Report Errors (if any)"
       env:
