--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
 outputs:
   errors:
     description: 'The golint output if the command fail'
-    value: ${{ steps.golint.outputs.errors }}
+    value: ${{ steps.golint.outputs.golint-output }}
 
 runs:
   using: composite
@@ -31,13 +31,13 @@ runs:
         GOLINT_PATH: ${{ inputs.path }}
       shell: bash
       run: |
-        echo "errors<<EOF" >> "${GITHUB_OUTPUT}"
+        echo "golint-output<<EOF" >> "${GITHUB_OUTPUT}"
         ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true
         echo "EOF" >> "${GITHUB_OUTPUT}"
 
     - name: "Report Errors (if any)"
       env:
-        GOLINT_OUTPUT: ${{ steps.golint.outputs.errors }}
+        GOLINT_OUTPUT: ${{ steps.golint.outputs.golint-output }}
       shell: bash
       run: |
         # Signal Error and Fail
