--- a/action.yml
+++ b/action.yml
@@ -27,13 +27,15 @@ runs:
 
     - name: "Run `golint`"
       id: golint
-      env:
-        GOLINT_PATH: ${{ inputs.path }}
       shell: bash
       run: |
-        echo "golint-output<<EOF" >> "${GITHUB_OUTPUT}"
-        ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" >> "${GITHUB_OUTPUT}" || true
-        echo "EOF" >> "${GITHUB_OUTPUT}"
+        {
+          echo "golint-output<<EOF"
+          ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true
+          echo "EOF"
+        } >> "${GITHUB_OUTPUT}"
+      env:
+        GOLINT_PATH: ${{ inputs.path }}
 
     - name: "Report Errors (if any)"
       if: steps.golint.outputs.golint-output != ''
