--- a/action.yml
+++ b/action.yml
@@ -28,9 +28,12 @@ runs:
     - name: "Run `golint`"
       id: golint
       shell: bash
-      run: '{ echo "errors<<EOF"; ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true; echo "EOF"; } >> "${GITHUB_OUTPUT}"'
       env:
         GOLINT_PATH: ${{ inputs.path }}
+      run: |
+        echo "errors<<EOF" >> "${GITHUB_OUTPUT}"
+        { ~/go/bin/golint -set_exit_status "${GOLINT_PATH}" || true; } | tee -a "${GITHUB_OUTPUT}"
+        echo "EOF" >> "${GITHUB_OUTPUT}"
 
     - name: "Report Errors (if any)"
       if: steps.golint.outputs.errors != ''
