--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -16,6 +16,6 @@ jobs:
         uses: actions/setup-go@v3
 
       - name: Run Golint
-        uses: norwd/golintr@main
+        uses: ./
         with:
           path: .github/test/...
