Explicitly use v1 for grawk action
Signed-off-by: Y. Meyer-Norwood <106889957+norwd@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -39,7 +39,7 @@ runs:
 
     - if: steps.golint.outputs.errors != ''
       name: "Display Errors"
-      uses: norwd/grawk@main
+      uses: norwd/grawk@v1
       with:
         input: ${{ steps.golint.outputs.errors }}
         program: |
